--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Media Viewer – Load Test</title>
+<title>Media Viewer</title>
 
 <style>
 body {
@@ -19,20 +19,16 @@ body {
 }
 
 .media-number {
-    font-size: 11px;
+    font-size: 12px;
     opacity: 0.6;
     margin-bottom: 4px;
 }
 
-.load-method {
-    font-size: 10px;
-    opacity: 0.5;
-    margin-bottom: 6px;
-}
-
-.media-container img {
+.media-container img,
+.media-container video {
     max-width: 100%;
     max-height: 70vh;
+    margin-bottom: 5px;
     border-radius: 10px;
 }
 
@@ -55,52 +51,101 @@ button {
     color: white;
     border-radius: 5px;
 }
+button:hover {
+    background-color: #45a049;
+}
 
+/* CRAZY SMALL back button */
 .back-btn {
     font-size: 10px;
     padding: 2px 6px;
     opacity: 0.4;
     background-color: #666;
 }
+.back-btn:hover {
+    opacity: 0.8;
+}
+
+#searchInput {
+    width: 80%;
+    max-width: 420px;
+    padding: 10px;
+    margin: 12px 0;
+    font-size: 16px;
+    border-radius: 6px;
+    border: none;
+    outline: none;
+}
 </style>
 </head>
 
 <body>
 
-<h1>Media Viewer – Twitter Load Test</h1>
+<h1>Media Viewer</h1>
+
+<input
+    type="text"
+    id="searchInput"
+    placeholder="Search by URL or number…"
+    oninput="debouncedSearch()"
+/>
 
 <div id="topControls"></div>
+
 <div id="mediaContainer"></div>
+
 <div id="bottomControls"></div>
 
 <script>
+/* ---------- CONFIG ---------- */
 const PAGE_SIZE = 20;
-let mediaUrls = [];
-let workingList = [];
+const SEARCH_DEBOUNCE_MS = 200;
+
+let mediaUrls = [];       // All 45k+ links will be loaded from JSON
+let workingList = [];     // Filtered or shuffled list
 let currentIndex = 0;
+let searchTimeout = null;
 
 /* ---------- HELPERS ---------- */
 
 function snapToTop() {
-    document.documentElement.scrollTop = 0;
-    document.body.scrollTop = 0;
+    requestAnimationFrame(() => {
+        document.documentElement.scrollTop = 0;
+        document.body.scrollTop = 0;
+    });
 }
 
-function isTwitter(url) {
-    return url.includes("pbs.twimg.com/media/");
+function shuffleArray(arr) {
+    for (let i = arr.length - 1; i > 0; i--) {
+        const j = Math.floor(Math.random() * (i + 1));
+        [arr[i], arr[j]] = [arr[j], arr[i]];
+    }
 }
+
+function isImage(url) {
+    return url.match(/\.(jpeg|jpg|gif|png|webp)$/i);
+}
+
+function isVideo(url) {
+    return url.endsWith(".mp4");
+}
+
+/* ---------- CONTROLS ---------- */
 
 function controlsHTML() {
     return `
         <button class="back-btn" onclick="prevPage()">←</button>
         <button onclick="nextPage()">Next ${PAGE_SIZE}</button>
+        <button onclick="superRandom()">Super Random</button>
     `;
 }
 
 function renderControls() {
-    topControls.innerHTML = controlsHTML();
-    bottomControls.innerHTML = controlsHTML();
+    document.getElementById("topControls").innerHTML = controlsHTML();
+    document.getElementById("bottomControls").innerHTML = controlsHTML();
 }
+
+/* ---------- PAGINATION ---------- */
 
 function nextPage() {
     render();
@@ -113,93 +158,41 @@ function prevPage() {
     snapToTop();
 }
 
-/* ---------- IMAGE LOAD TEST ---------- */
-
-function createTestImage(url, labelEl) {
-    const attempts = [
-        {
-            name: "direct",
-            src: url,
-            setup: img => {}
-        },
-        {
-            name: "no-referrer",
-            src: url,
-            setup: img => img.referrerPolicy = "no-referrer"
-        },
-        {
-            name: "cors-anon",
-            src: url,
-            setup: img => img.crossOrigin = "anonymous"
-        },
-        {
-            name: "weserv",
-            src: "https://images.weserv.nl/?url=" + encodeURIComponent(url.replace(/^https?:\/\//, "")),
-            setup: img => {}
-        },
-        {
-            name: "weserv-jpg",
-            src: "https://images.weserv.nl/?output=jpg&url=" + encodeURIComponent(url.replace(/^https?:\/\//, "")),
-            setup: img => {}
-        },
-        {
-            name: "weserv-resize",
-            src: "https://images.weserv.nl/?w=1200&url=" + encodeURIComponent(url.replace(/^https?:\/\//, "")),
-            setup: img => {}
-        }
-    ];
-
-    let attemptIndex = 0;
-
-    const img = document.createElement("img");
-    img.loading = "lazy";
-    img.decoding = "async";
-
-    function tryNext() {
-        if (attemptIndex >= attempts.length) {
-            labelEl.textContent = "❌ failed all methods";
-            return;
-        }
-
-        const attempt = attempts[attemptIndex++];
-        img.onload = () => {
-            labelEl.textContent = `loaded via: ${attempt.name}`;
-        };
-        img.onerror = () => {
-            tryNext();
-        };
-
-        attempt.setup(img);
-        img.src = attempt.src;
-    }
-
-    tryNext();
-    return img;
+function superRandom() {
+    shuffleArray(workingList);
+    currentIndex = 0;
+    render();
+    snapToTop();
 }
 
 /* ---------- RENDER ---------- */
 
 function render() {
     renderControls();
-    mediaContainer.innerHTML = "";
+
+    const container = document.getElementById("mediaContainer");
+    container.innerHTML = "";
 
     for (let i = 0; i < PAGE_SIZE && currentIndex < workingList.length; i++) {
         const item = workingList[currentIndex];
         const wrapper = document.createElement("div");
         wrapper.className = "media-container";
 
-        const num = document.createElement("div");
-        num.className = "media-number";
-        num.textContent = `#${item.index}`;
-        wrapper.appendChild(num);
+        const number = document.createElement("div");
+        number.className = "media-number";
+        number.textContent = `#${item.index}`;
+        wrapper.appendChild(number);
 
-        const label = document.createElement("div");
-        label.className = "load-method";
-        label.textContent = "loading…";
-        wrapper.appendChild(label);
-
-        if (isTwitter(item.url)) {
-            const img = createTestImage(item.url, label);
+        if (isVideo(item.url)) {
+            const v = document.createElement("video");
+            v.src = item.url;
+            v.controls = true;
+            v.preload = "none";
+            wrapper.appendChild(v);
+        } else if (isImage(item.url)) {
+            const img = document.createElement("img");
+            img.src = item.url;
+            img.loading = "lazy";
             wrapper.appendChild(img);
         }
 
@@ -209,21 +202,58 @@ function render() {
         link.textContent = item.url;
         wrapper.appendChild(link);
 
-        mediaContainer.appendChild(wrapper);
+        container.appendChild(wrapper);
         currentIndex++;
     }
 }
 
-/* ---------- INIT ---------- */
+/* ---------- SEARCH ---------- */
 
+function applySearch() {
+    const q = document.getElementById("searchInput").value.toLowerCase();
+
+    if (!q) {
+        workingList = mediaUrls.map((url, i) => ({ url, index: i + 1 }));
+        currentIndex = 0;
+        render();
+        snapToTop();
+        return;
+    }
+
+    const num = q.replace("#", "");
+
+    workingList = mediaUrls
+        .map((url, i) => ({ url, index: i + 1 }))
+        .filter(item =>
+            item.url.toLowerCase().includes(q) ||
+            item.index.toString() === num
+        );
+
+    currentIndex = 0;
+    render();
+    snapToTop();
+}
+
+// debounce to avoid freeze for 45k items
+function debouncedSearch() {
+    clearTimeout(searchTimeout);
+    searchTimeout = setTimeout(applySearch, SEARCH_DEBOUNCE_MS);
+}
+
+/* ---------- INITIALIZATION ---------- */
+
+// Load JSON containing 45k+ links
 fetch("media.json")
-    .then(r => r.json())
+    .then(res => res.json())
     .then(data => {
         mediaUrls = data;
         workingList = mediaUrls.map((url, i) => ({ url, index: i + 1 }));
+        currentIndex = 0;
         render();
-    });
-</script>
+        snapToTop();
+    })
+    .catch(err => console.error("Failed to load media.json:", err));
 
+</script>
 </body>
 </html>
